samples/_failures_safe/1761190392_91d3e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9111a0f2.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_9111a0f2.c:145:9: error: expected declaration or statement at end of input
  145 |         lexer->column++;
      |         ^~~~~
./samples/SAFE/__tmp_9111a0f2.c:145:9: error: expected declaration or statement at end of input
